@@ -1,3 +1,8 @@
+2008-12-21  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Utils.cc: Fixed application crash.
+	- GParted would crash when saving details if locale was not set.
+
 2008-12-20  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/ext4.cc: Add flags to create journal and use extent option.
